Fix alignment for ability & spell menu headings

--- a/crawl-ref/source/webserver/game_data/static/style.css
+++ b/crawl-ref/source/webserver/game_data/static/style.css
@@ -409,11 +409,6 @@ body {
 #game .bg14 { background-color: #fce94f; } /* yellow */
 #game .bg15 { background-color: #eeeeec; } /* white */
 
-/* A hack to align the columns in the spell menu */
-.menu_spell #menu_title {
-    margin-left: 32px;
-}
-
 /* Use crisp (nearest-neighbor) upscaling on HiDPI screens to avoid blurriness. */
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     canvas {
